Doc: Started writing the architecture

--- a/doc/report/references.bib
+++ b/doc/report/references.bib
@@ -679,3 +679,11 @@
 	month = "06",
 	note = "\url{https://itch.io/developers}, accessed 2016-06-07",
 }
+
+@misc{epicgames2016doc,
+	author = {Epic Games},
+	title = {Unreal Engine 4 Documentation},
+	year = "2016",
+	month = "06",
+	note = "\url{https://docs.unrealengine.com/latest/INT/}, accessed 2016-06-07",
+}
