Doc: Big update
Added agree/disagree results in the spreadsheet, made a table for it.
Fixed some section references
Changed the title
Made additions to the introduction
Wrote process for Methodology
Wrote Architecture
Wrote Implementation
Fixed game history
Made intros and summaries for old litterature studies.

--- a/doc/report/conclusion/chp_further_work.tex
+++ b/doc/report/conclusion/chp_further_work.tex
@@ -1,4 +1,5 @@
 \chapter{Further Work}
+\label{chp:further_work}
 % bullet liste istedet, kan se på det.
 \section{Extra Game Features}
 \section{Different Experiments}
