--- a/doc/report/experiment/chp_preparations.tex
+++ b/doc/report/experiment/chp_preparations.tex
@@ -9,7 +9,7 @@ Bente Sandø the leader of the after school programme for Buvik School was conta
 
 
 \section{Questionnaire}
-A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the gameflow categories: Concentration, a. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in section \ref{sec:gameflow}.
+A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the gameflow categories: Concentration, a. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in section \ref{immersionGameflow}.
 
 Note: the questions were asked verbally to the children, in Norwegian, and their answers were logged by the interviewer. The original Norwegian questionnaire is included in Appendix X.
 
