--- a/doc/report/experiment/chp_results_and_analysis.tex
+++ b/doc/report/experiment/chp_results_and_analysis.tex
@@ -3,40 +3,49 @@ This chapter presents the results of the play testing session along with observa
 
 
 \section{Results}
-The statistical mean, variance and standard deviation of the questions from the questionnaire can be seen in Table \ref{tab:stat_results}. The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (44\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
+Table \ref{tab:simple_results} shows the agreement and disagreement of the questions that were asked. For simplicity's sake, agreement and strong agreement have been aggregated, likewise with disagreement and strong disagreement.
+For more detailed information regarding the results, like statistical mean, variance and standard deviation of the questions from the questionnaire can be found in Appendix X. \note{insert appendix} The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (44\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
 
 %TODO: Endre tabellen til å være mye enklere, ha detaljer i appendix
 
-\begin{table}[!ht]
+\begin{table}[]
 	\centering
-	\caption{Statistical results of the questionnaire}
-	\label{tab:stat_results}
-	\begin{tabular}{|l|l|l|l|l|}
+	\caption{The results from the questionnaire}
+	\label{tab:simple_results}
+	\begin{tabularx}{\textwidth}{|l|X|l|l|}
 		\hline
-		\textbf{Question} & \textbf{Mean} & \textbf{Median} & \textbf{Variance} & \textbf{ST.Dev} \\ \hline
-		Q1                & 3,6842105263  & 4               & 0,2280701754      & 0,4775669329    \\ \hline
-		Q2                & 2,5789473684  & 3               & 1,701754386       & 1,3045130839    \\ \hline
-		Q3                & 3,1578947368  & 3               & 1,0292397661      & 1,014514547     \\ \hline
-		Q4                & 3,4210526316  & 4               & 0,701754386       & 0,8377078166    \\ \hline
-		Q5                & 3,9473684211  & 4               & 0,0526315789      & 0,2294157339    \\ \hline
-		Q6                & 3,2631578947  & 4               & 1,0935672515      & 1,045737659     \\ \hline
-		Q7                & 1,3684210526  & 1               & 0,9122807018      & 0,9551338659    \\ \hline
-		Q8                & 1,4736842105  & 1               & 1,0409356725      & 1,0202625508    \\ \hline
-		Q9                & 2,5789473684  & 3               & 1,5906432749      & 1,2612070706    \\ \hline
-		Q10               & 2,1052631579  & 2               & 1,5438596491      & 1,2425214884    \\ \hline
-		Q11               & 3,5263157895  & 4               & 0,9298245614      & 0,9642741111    \\ \hline
-		Q12               & 3,0526315789  & 4               & 1,3859649123      & 1,1772701102    \\ \hline
-		Q13               & 2,8421052632  & 3               & 1,5847953216      & 1,2588865404    \\ \hline
-		Q14               & 3,2631578947  & 4               & 1,2046783626      & 1,0975784084    \\ \hline
-		Q15               & 3,6842105263  & 4               & 0,6725146199      & 0,8200698872    \\ \hline
-		Q16               & 1,7894736842  & 1               & 1,2865497076      & 1,1342617456    \\ \hline
-		Q17               & 3,8947368421  & 4               & 0,0994152047      & 0,3153017676    \\ \hline
-		Q18               & 3,9473684211  & 4               & 0,0526315789      & 0,2294157339    \\ \hline
-		Q19               & 3,6842105263  & 4               & 0,4502923977      & 0,6710382982    \\ \hline
-		Q20               & 3,7894736842  & 4               & 0,3976608187      & 0,6306035353    \\ \hline
-		Q21               & 4             & 4               & 0                 & 0               \\ \hline
-		Q22               & 4             & 4               & 0                 & 0               \\ \hline
-	\end{tabular}
+		\textbf{ID} & \textbf{Question}                                              & \textbf{Agree} & \textbf{Disagree} \\ \hline
+		\textbf{}   & \textbf{Concentration}                                         & \textbf{}      & \textbf{}         \\ \hline
+		Q1          & I am concentrated when playing the game                        & 100,00\%       & 0,00\%            \\ \hline
+		\textbf{}   & \textbf{Goal Clarity}                                          & \textbf{}      & \textbf{}         \\ \hline
+		Q2          & It was easy to understand the goal of the game                 & 52,63\%        & 47,37\%           \\ \hline
+		\textbf{}   & \textbf{Feedback}                                              & \textbf{}      & \textbf{}         \\ \hline
+		Q3          & It is easy to understand when I do something wrong in the game & 78,95\%        & 21,05\%           \\ \hline
+		Q4          & It is easy to understand when I do something good in the game  & 89,47\%        & 10,53\%           \\ \hline
+		Q5          & I liked the graphics of the game                               & 100,00\%       & 0,00\%            \\ \hline
+		Q6          & I liked the sounds of the game                                 & 78,95\%        & 21,05\%           \\ \hline
+		\textbf{}   & \textbf{Challenge}                                             & \textbf{}      & \textbf{}         \\ \hline
+		Q7          & I get bored when playing the game                              & 10,53\%        & 89,47\%           \\ \hline
+		Q8          & The game was too easy                                          & 15,79\%        & 84,21\%           \\ \hline
+		Q9          & The game was adequately difficult                              & 57,89\%        & 42,11\%           \\ \hline
+		Q10         & The game was too hard                                          & 36,84\%        & 63,16\%           \\ \hline
+		Q11         & My skill gradually improved when playing the game              & 89,47\%        & 10,53\%           \\ \hline
+		\textbf{}   & \textbf{Autonomy}                                              & \textbf{}      & \textbf{}         \\ \hline
+		Q12         & I felt in control of the movements of the player               & 68,42\%        & 31,58\%           \\ \hline
+		Q13         & I could recover from errors I made in the game                 & 68,42\%        & 31,58\%           \\ \hline
+		\textbf{}   & \textbf{Immersion}                                             & \textbf{}      & \textbf{}         \\ \hline
+		Q14         & Time goes by fast when plaing the game                         & 84,21\%        & 15,79\%           \\ \hline
+		Q15         & I become unaware of my surroundings when playing the game      & 89,47\%        & 10,53\%           \\ \hline
+		\textbf{}   & \textbf{Social Interaction}                                    & \textbf{}      & \textbf{}         \\ \hline
+		Q16         & I was competing with others to reach the furthest              & 31,58\%        & 68,42\%           \\ \hline
+		Q17         & It was important to communicate when playing the game          & 100,00\%       & 0,00\%            \\ \hline
+		Q18         & It was important to cooperate when playing the game            & 100,00\%       & 0,00\%            \\ \hline
+		Q19         & I cooperated well with the other player                        & 89,47\%        & 10,53\%           \\ \hline
+		Q20         & The other player cooperated well with me                       & 89,47\%        & 10,53\%           \\ \hline
+		\textbf{}   & \textbf{Game Enjoyment}                                        & \textbf{}      & \textbf{}         \\ \hline
+		Q21         & I enjoyed playing the game                                     & 100,00\%       & 0,00\%            \\ \hline
+		Q22         & I would like to play this game at home                         & 100,00\%       & 0,00\%            \\ \hline
+	\end{tabularx}
 \end{table}
 
 
@@ -47,6 +56,7 @@ The majority of the children were very cooperative with each other and there wer
 
 
 \section{Analysis}
+\note{Trenger fullføring}
 \subsection{Concentration}
 \subsection{Goal Clarity}
 \subsection{Feedback}
