--- a/doc/report/experiment/chp_the_test.tex
+++ b/doc/report/experiment/chp_the_test.tex
@@ -1,4 +1,5 @@
 \chapter{Play Testing}
+\label{chp:play_test}
 \section{Plan}
 After creating the questionnaire and establishing the date and location for the play testing, the testing session was planned. The play test would occur from 2PM to 5PM on the 11th of May on Buvik School's after school program. 
 
