--- a/doc/report/init/titlepage.tex
+++ b/doc/report/init/titlepage.tex
@@ -5,8 +5,8 @@
 	%\vspace{1cm}
 	{\scshape\Large TDT4900 - Computer Science, Master's Thesis\par}
 	\vspace{1.5cm}
-	{\huge\bfseries \uppercase{Alternative games} \\ 
-	\Large A cooperative video game with different roles - concept and experimentation\par}
+	{\huge\bfseries \uppercase{A collaborative game for children} \\ 
+	\Large Game Prototype and Experiment\par}
 %collaborative gameplay for children - game concept and evaluation
 	\vspace{2cm}
 	{\Large\itshape David Hovind\par}
