--- a/doc/report/introduction/chp_introduction.tex
+++ b/doc/report/introduction/chp_introduction.tex
@@ -1,16 +1,17 @@
 \chapter{Introduction}
-The video game industry is one of the biggest entertainment industries in the world, and it has become a big part of people's lives, especially children, who are exposed to technologies like smart phones and tablet from an early age. 
+The video game industry is one of the biggest entertainment industries in the world, and it has become a big part of people's lives, especially children, who are exposed to technologies like smart phones and tablets from an early age. 
 
 Video games come in all shapes and sizes, from being played on computers, video game consoles, smart phones, and even virtual reality headsets. There are also different types of video game developers ranging from big companies creating triple-A titles to small independent game companies and even individuals creating independent video games. 
 
 Today's technology makes it so that individuals and small teams can create video games that can reach millions of gamers online, without investing much more than just time. Big video game companies usually stick to tried and true video game types and interaction devices to reach as many people as possible and to generate the most revenue. Independent developers can on the other hand generally be more creative and innovative when creating video games, and create games that use unconventional interaction devices or game concepts.
 
-Proprietary input devices like motion controls for video game consoles mostly use standard communication protocols like USB or Bluetooth, which can be used to interface with a computer with the help of official and unofficial driver software. This is an exciting area for research which this report will delve into.
+Proprietary input devices like motion controls for video game consoles mostly use standard communication protocols like USB or Bluetooth, which can be used to interface with a computer with the help of official and unofficial driver software. 
 
-\note{Nevne social interaction i spill, ønsker å se på samarbeid, spesielt blandt barn. boosting av sosial interaction.}
-%TODO: nevne social interaction
-%TODO: ønsket å se på samarbeid, spsielt mellom barn. boosting av social interaction. nevne i motivasjon og.
-%
+Social interaction is a big part of video games, with most games including a multiplayer mode, either local or online. Gaming can be a way to socialize with strangers to create new friendships, or with friends to strengthen (or ruin) friendships. It would be interesting to se how children can interact with each other when playing a collaborative game designed to encourage social interaction and collaboration.
+
+These are exciting areas for research that this thesis will delve into.
+
+\note{Feedback?}
 
 \section{Context}
 This report is an extension of work done in a specialization project where I and Kjell R. Elstad explored different game technologies and concepts that goes into creating innovative video games. I was interested and continuing this work and to create a game prototype of one of the game concepts that were created in the specialization project.
@@ -32,10 +33,11 @@ The following problem description is based on the an earlier version given for t
 \end{displayquote}
 
 The first phase of this project was covered in the specialization project. This master's thesis will cover the second and third phase of the overall project outline which covers game prototyping and play-testing.
-
+\note{burde jeg endre problembeskrivelsen for å inkludere barn og samarbeid?}
 
 \section{Structure}
 The structure of this thesis is divided into five parts which roughly correspond to the order of phases that this project went through.
+\note{Denne delen tenger litt overhaling}
 \begin{description}
 	\item[Part I: Introduction and Methodology]
 	The introduction provides the context and motivation behind the project, the problem statement and the structure of this report.
