--- a/doc/report/introduction/chp_methodology.tex
+++ b/doc/report/introduction/chp_methodology.tex
@@ -1,6 +1,8 @@
 \chapter{Methodology}
 The research method used in this project is based on the \gls{gqm} approach \cite{1992basili}, where firstly a research goal is defined (conceptual level), secondly the goal is decomposed into research questions (operational level), and lastly the research questions are described by a set of metrics that answers the research questions (quantitative level).
 
+\note{trenger feedback på dette kapittelet.}
+
 
 \section{Research Goals}
 The following research goals were developed using the template for research goals of the \gls{gqm} framework.
@@ -9,7 +11,7 @@ The following research goals were developed using the template for research goal
 	
 	\item[RG2:] The purpose of this project is to see how children experience a collaborative game prototype where two players have different roles to find out if this is an enjoyable and entertaining experience from the point of view of the children in the context of playing video games.
 	
-	\item[RG3:] The purpose of this study is to investigate how different interaction devices can be used to create video games from the point of view of an independent developer in the context of video game design. 
+	\item[RG3:] The purpose of this study is to investigate what tools are available to create video games from the point of view of an independent developer in the context of video game design. 
 \end{description}
 
 %En utfordring: Begge spillerene har forskjellige roller, men begge er aktive.
@@ -28,15 +30,14 @@ The research goals are broken down into research question according to the \gls{
 \begin{description}
 	\item[RQ1.1:] What game mechanics are suitable for a game with two different roles?
 	\item[RQ1.2:] How can the engagement of both player be equally balanced when they have different roles?
-	\item[RQ1.3] How can the game be design to create a strong dependency between the two players.
+	\item[RQ1.3:] How can the game be designed to create a strong dependency between the two players.
 \end{description}
 \subsection{Research Goal 2: Children's Experience}
 \begin{description}
 	\item[RQ2.1:] Is a collaborative game with different roles engaging for children?
-	\item[RQ2.2:] Does the children's gender or game experience affect game enjoyment of a collaborative game with different roles?
-	%ha med eengagement og concentration og.
+	\item[RQ2.2:] Does the children's gender or game experience affect game enjoyment, concentration, or engagement in a collaborative game with different roles?
 \end{description}
-\subsection{Research Goal 3: Interaction Devices}
+\subsection{Research Goal 3: Game Development}
 \begin{description}
 	\item[RQ3.1] What tools are available for developing video games as an independent developer.
 	\item[RQ3.2] Can proprietary controllers made for game consoles be used to develop games for the PC?
@@ -44,6 +45,17 @@ The research goals are broken down into research question according to the \gls{
 	
 
 \section{Process}
+%litteratur studie:
+This section explains the different methods used in this project to be able to answer the research questions. 
+
+\subsection{Litterature Study}
+A literature study will be conducted which will explore different aspects of video game development. This includes first, an evolution of game technology to provide context and background for the technologies and concepts used in the video game industry. Second, interaction devices to give an insight into how player can interact with video games and to find interesting interaction devices to be used with the game prototype. Third, immersion in order to be able to create an immersive game and also to help with the questionnaire. Last, game development technologies in order to understand what options are available and to answer research questions RQ3.1 and RQ3.2.
+
+\subsection{Game Prototype}
+A game prototype will be created to be able to test how children will respond to a collaborative game. This game prototype will feature two players with different roles that need to work together to reach the goal. The focus of the game prototype will be to encourage social interaction between the players. The prototype will be developed using tools, interaction devices, and concepts based on the litterature study. The focus of the development will be to create a prototype that is easily modifiable to add new features, and the gameplay must be simple enough for children to understand and play. The development of the game prototype will be the main way of answering the research questions RQ1.1, RQ1.2, and RQ1.3.
+
+\subsection{Play Testing and Questionnaire}
+A play testing session with a group of children will be conducted, accompanied by a questionnaire that will help with the evaluation of the game prototype. A questionnaire was chosen to ask all the participants the same questions in order to get answers in a quantitative form that can easily be analysed. The observations from the play testing and results from the questionnaire will be used in the answering of research questions RQ2.1 and RQ2.2.
 
 
-\section{Data Sources}
+
