--- a/doc/report/references.bib
+++ b/doc/report/references.bib
@@ -687,3 +687,10 @@
 	month = "06",
 	note = "\url{https://docs.unrealengine.com/latest/INT/}, accessed 2016-06-07",
 }
+
+@article{lazzaro2004we,
+	title={Why we play games: Four keys to more emotion without story},
+	author={Lazzaro, Nicole},
+	year={2004}
+	note = "\url{http://www.xeodesign.com/whyweplaygames/xeodesign_whyweplaygames.pdf}, accessed 2016-06-09",
+}
