--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -21,6 +21,8 @@
 \usepackage{booktabs}
 \usepackage{titlesec}
 \usepackage{epigraph}
+\usepackage{rotating}
+\usepackage{tabularx}
 
 \makeatletter
 \titleformat{\part}[display]
