--- a/doc/report/results/chp_design.tex
+++ b/doc/report/results/chp_design.tex
@@ -23,7 +23,7 @@ The game prototype has a total of five levels with varying degrees of difficulty
 
 \section{Requirements}
 Because the game prototype is a creative initiative there were no pre determined requirements. The requirements presented here are meant to make sure that the prototype adheres to the core concepts of the game and allows for interesting gameplay and cooperation between players. Table \ref{tab:requirements} contains a list of the requirements for the game prototype. 
-%TODO: litt mer høynivå requirements. audio, animation, controls, puzzle elements
+\note{TODO: litt mer høynivå requirements. audio, animation, controls, puzzle elements}
 
 
 
