--- a/doc/report/study/chp_interaction_devices.tex
+++ b/doc/report/study/chp_interaction_devices.tex
@@ -1,8 +1,8 @@
 \chapter{Interaction Devices}
 \label{chap:interaction}
-An important part of playing a game is being able to interact with it.
+An important part of playing a game is being able to interact with it. The motivation for this chapter is to discover various interaction devices that could be used with the game prototype. This chapter will provide insight into what types of interaction devices can be used to interact with video games.
 
-\note{Skrive noe om motivasjonen til å ha med interaction devices.}
+\note{Er denne introen ok?}
 % se på forskjellige interaction devices for å se hva som kan brukes.
 
 
@@ -153,7 +153,7 @@ It is possible to get a yoke and from there keys, switches, and other instrument
 \label{lightguns}
 Light gun controllers are based on a camera and a source of light.
 The point of light is used to determine where the light gun is pointed.
-In the example of Wiimotes, the source of light is the Sensorbar, as discussed in Section \ref{wiiPointing}.
+This is similar to how the WiiMote works, where the source of light is the Sensorbar.
 It is worth noting that the Sensorbar has multiple \gls{ir} LEDs used to provide orientation in addition to position.
 For the older game Duck Hunt \cite{duckhunt1984}, seen in Figure \ref{fig:duckhunt}, the light source is the television screen.
 The entire screen turns black, except for a small dot located where the player should be aiming, for a short time.
@@ -179,5 +179,6 @@ Dancing is another common example, where the position of the player's feet on th
 More recent games has also used cameras or motion detection controllers.
 
 \section{Summary}
-\note{Skriv summary}
+There is a multitude of ways of interacting with a video game, this chapter has explored the most common devices such as keyboards and gamepads, and also more specialized game controllers like light guns and plastic instruments. Using different interaction devices provides different experiences for the player and can be a big factor in the enjoyment and immersion in a video game. This information will prove useful when deciding on what interaction devices to use for the game prototype to be developed.
+\note{feedback?}
 %ha med hva som er mest aktuelt for oppgaven.
