--- a/doc/report/results/chp_implementation.tex
+++ b/doc/report/results/chp_implementation.tex
@@ -1,6 +1,38 @@
 \chapter{Implementation}
+This chapter explains the development process of the game prototype, the testing that was done, and hindrances during development.
+\note{Hadde ver kjekt med litt feedback på dette kapitlet.}
+
+
 \section{Development Process}
+The development of the game prototype started on the 1st of February and ended on the 11th of May, the date of the play testing. The overall process for development was a weekly cycle, where at the end of each cycle there was a meeting with the advisor. The purpose of the meetings was to discuss the work done during that week, and plan the work for the next week. The meetings usually started with a test or showcase of the state of the game prototype, followed by a discussion on what elements had been implemented from the previous meeting and what new features that were to be implemented next. This development process is similar to Scrum or Extreme Programming, but there were no customer requirements, but rather a list of features to be implemented each week. During development the focus was on the features that were decided upon in the weekly meeting prior.
+
+The development can be split into four main phases which will be discussed in the following sections.
+
+\subsection{Early Phase}
+The early phase made up the bulk of February and was spent getting used to the Unreal Engine and getting core gameplay mechanics working. It started with creating a basic side scrolling game where a character could move around and jump on different platforms. Some core mechanics was implemented here, like having items that the character could pick up. The character was controlled by the keyboard, and it was possible to use the mouse to place items in the world. The inventory with a HUD was created during this phase and items that the character picked up ended up in the inventory, that could be clicked with the mouse to select and placed in the world. 
+
+\subsection{Main Gameplay Elements}
+After getting to know the Unreal Engine better, this next phase was during the weeks of March and focused on creating more gameplay elements. Most of the main gameplay elements were developed during this phase including coins, springboard, and spikes. A few different testing levels were created in order to properly test these new elements. Enemies were also introduced during this phase along with a HUD to display the character's health and number of coins collected. During this phase there was a graphical overhaul of the game prototype which helped with creativity and made it easier to develop new features.
+
+\subsection{Additional Features and Sound}
+With most of the gameplay elements implemented it was time to get the game ready for testing. This phase was during the first three weeks of April. The focus of this phase was to create more dependencies between the players, and having the necessary elements for creating interesting levels. The bait and coloured boxes were developed during this period to give the second player more interaction with the game world. Background music and sound effects were also added during this period.
+
+\subsection{Level Design and Play Test}
+Up until the middle of April there were only a few basic testing levels without much dynamic interaction between the players. The last phase started around the last two weeks of April and ended at the 11th of May with the play testing. The main purpose of this phase was to get the game to a playable condition with some interesting levels. The five main levels of the game prototype was designed in this phase, three smaller introductory levels, and two larger more challenging levels. A lot of time went into getting the PlayStation Move controller to work with the game, but it was abandoned due to not working satisfactory. Due to this the keyboard and mouse that had been used for internal testing was replaced with a gamepad for each player. The controls were basic with only one movement joystick and one action button for each player. More information about why the Move controller was abandoned can be found in Section \ref{sec:dev_limitations}, along with some other problems and limitations.
+
 \section{Testing}
-\section{Evolution}
+Testing was done throughout the development period by the author, and during the weekly meetings with the advisor. Unreal Engine made it easy to test the game from any point with their Play In Editor feature, which could be activated by the click of a button. Some test levels were created during development in order to test how the different gameplay elements interacted with the character and the hand.
+
+Some final testing was performed in order to confirm that the game prototype adhered to the requirements that was set.
+\note{Må gjøre ferdig requirementsa før jeg fullfører dette}
+
 \section{Limitations and Obstacles}
+\label{sec:dev_limitations}
+The development period was pretty straightforward without many obstacles or limitations. One limiting factor was that there was only on person developing and testing the game, besides the weekly meetings with the advisor. This made it hard to judge the possible interactions between two different players when developing. Some level elements might be trivial to overcome with just one player, but more challenging with two players and vice versa. Being only one person also meant that it was hard to control two controllers at once, so most of the testing was done using a mouse and keyboard.
+
+Another obstacle was the creative aspect of developing a game. The levels and game elements had to be fun and challenging for both players, and the game was supposed to encourage social interaction and cooperation between the players. The weekly meeting with the advisor helped a lot with getting the game elements right by providing a second opinion and new ideas.
+
+The game prototype was originally going to use the PlayStation Move controller for controlling the hand by the second player, but was later abandoned for not functioning properly. The Move had been originally tested to work with Unreal Engine during the first week of the project, so it was not seen as a major problem to implement later in the development. When the time come to get the Move controller integrated into the game some problems occurred. The plugin that was used to interface with the Move only provided a simple example to control an object on the screen. In order to get the satisfactory behaviour of the move controller in the game, access to the raw data from the camera tracker was needed in order to determine the position of the controller. This was impossibe to do with this plugin without the use of a virtual reality headset, because the plugin was integrated with th \gls{vr} part of Unreal Engine. The creator of the plugin was contacted in order to try to solve this problem, but the creator had discontinued support of the plugin in order to create a new system that was independent of Unreal Engine. After much trial and error, the Move controller was eventually abandoned in favor of using a gamepad for controlling the hand.
+
 \section{Summary}
+The development of the game prototype was an exciting and challenging experience. The weekly cycle of development worked well, and helped set intermediate goals throughout the development period. The Unreal Engine was very helpful, but took some getting used to in the beginning. Being a single developer creating a two-player game presented some challenges, but weekly meetings with the advisor helped combat those challenges. Even though the final prototype did not use the Move controller as planned, the play testing was still a success, and having similar controllers might even have helped the cooperation between the players. The game prototype was ready with five playable levels on the day of the play testing, which is documented in Chapter \ref{chp:play_test}.
