--- a/doc/report/study/chp_immersion.tex
+++ b/doc/report/study/chp_immersion.tex
@@ -3,19 +3,15 @@
 % TODO update intro
 % CONSIDER adding a section for social/player interaction
 
-This chapter takes a look at different aspects of game immersion.
-Immersion is a part of gameflow \cite{sweetser2005gameflow} and affects the player's involvement in the game and loss of connection to their surroundings.
-
-There are many different parts required to make the player immersed in a game.
+This chapter takes a look at different aspects of game immersion. There are many different parts required to make the player immersed in a game.
 At first glance, these usually involves a mix of visuals and audio.
 For console games, the use of haptic feedback is also common.
 Other measures to keep the player immersed become apparent when looking deeper.
 One of these is through the setting and storyline of a game, and there are different ways for a storyline to unfold.
-If a game does not keep up with the standard set by the other game aspects, the suspense of disbelief may be broken \cite{overmars2012}.
+If a game does not keep up with the standard set by the other game aspects, the suspense of disbelief may be broken \cite{overmars2012}. Social interaction is a big part of why we play video game, people use video games as a way to spend time with friends.
 
-\note{Hvorfor har jeg med immersion?}
-%Ha med med tanke på spørreundersøkelse. det mest interessane er den sosiale biten. forskjellige roller, samspillet er en stor driver for imersion.
-%viktig med tanke på utvikling.
+Immersion is important when creating a game, and the information gathered here will be important when designing and developing the game prototype. The social interaction  section will be especially useful when creating the game prototype, because it will be one of the core concepts. The concepts from Gameflow will also be important when creating questions for the questionnaire, since it will be based on Gameflow.
+\note{Feedback?}
 
 
 \section{Gameflow and Game Enjoyment}
@@ -138,20 +134,23 @@ By giving the player a setting to the game and a storyline to play, they may fin
 This can be achieved by adding an overarching story, smaller stories, character progression, a game world, and other elements outside the core game concept.
 
 \section{Social Interaction}
-\note{Skrive om social interaction}
+Social interaction is not part of the flow in Sweetser's Gameflow \cite{sweetser2005gameflow}, and can often interrupt the immersion in a game by providing a link to the real world that can break the immersion in a game world. However social interaction plays a big part in video games and some people play games for the social interaction. Lazzaro \cite{lazzaro2004we} mentions social interaction as one of the four keys to emotion in their article on why we play video games. Many players get their enjoyment out of a game by playing with other people inside, and outside of the game. Players may even play games that they do not like, just to spend time with their friends. Some players use video games as a mechanism for social interaction. Multiplayer games are best at creating social interaction and games with both cooperative and competitive elements offer a wider variety of emotions in the players.
+\note{feedback?}
+
 
 \section{Summary}
-\note{Denne delen må nok skrives om litt for å passe}
+\note{Er dette for langt?}
 In this chapter some of the different aspects that may affect immersion in a game has been discussed.
 While each topic can be the subject of a closer study by it self, this chapter only gives an overview and some examples.
 
 In the first section, the idea behind gameflow and enjoyment in games is described and put in the context of the following sections.
 
-The next sections describe the direct links for giving the player feedback from the game.
 Graphics provide an important interface to most games, although some games without a graphical interface exists.
 Audio can be used both for ambiance and as an essential aspect of a game.
 Giving the player a form of haptic feedback may also give a stronger sense of immersion.
 \gls{ar} and \gls{vr} technology opens the gates for new ways of playing and interacting with games.
+
+\gls{ar} and \gls{vr} provide a whole new way to get immersed in video games by taking up most of, in not all of your vision. This is an interesting area of video games and it will be interesting to see if this technology gains popularoty in the masses.
 
 Game content is another important aspect.
 Creating a setting and storyline in a game may have a significant influence on immersion and motivation.
@@ -160,6 +159,4 @@ Some combinations of these may work better than others.
 Using one or more of these effects the wrong way may break the immersion, even if other aspects are well implemented.
 Accessibility for gamers with disabilities is also a subject to keep in mind when developing games.
 
-\gls{ar} and \gls{vr} are both current technologies that may have a large potential for innovation.
-The concept of using emergence and alternative uses of \gls{ai} methods may also prove to hold large innovative potential.
-Creating games with accessibility in mind may be a challenge, but may hold a potential for innovative games.
+Social interaction plays a big part in why we play video games. People even play games they dislike just to play with their friends. Competition and cooperation create emotions in players, which players use as a mechanism for social interaction.
